<resources>
    <string name="app_name">Instagram</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account? Sign up</string>
    <string name="error_adding_user_data">Error adding user data</string>
    <string name="authentication_success">Authentication success</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="no_data_found">No Data Found</string>
    <string name="login_successful">Login successful</string>
    <string name="login_invalid_user">Login invalid user</string>
    <string name="login_credential_is_invalid">Login credential is invalid</string>
    <string name="finish">Finish</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_profile">Share Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="setting">setting</string>
    <string name="add">Add</string>
    <string name="here_is_the_share_content_body_download_our_app_from_google_play_store_https_play_google_com_store_apps">Here is the share content body. Download our app from Google Play Store: https://play.google.com/store/apps/</string>
    <string name="profile">Profile</string>
    <string name="add_post">Add Post</string>
    <string name="story">Story</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="update_your_email">Update your email</string>
    <string name="update_your_username">Update your username</string>
    <string name="update_your_password">Update your password</string>
    <string name="update_profile">Update profile</string>
    <string name="add_reel">Add Reel</string>
    <string name="new_post">New Post</string>
    <string name="caption">Caption</string>
    <string name="new_reel">New Reel</string>
    <string name="instagram">Instagram</string>
    <string name="please_upload_image_first">Please Upload Image First</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="post">Post</string>
    <string name="reel">Reel</string>
    <string name="saved">Saved</string>
    <string name="successfully_saved">Successfully Saved</string>
    <string name="post_btn">Post</string>
    <string name="cancel_btn">Cancel</string>
    <string name="add_story">Add Story</string>
    <string name="failed_to_upload_video">Failed to upload video</string>
    <string name="no_images_selected">No images selected</string>
    <string name="failed_to_upload_image">Failed to upload image</string>
    <string name="edit_picture">Edit Picture</string>
    <string name="add_picture">Add Picture</string>
    <string name="your_story">Your Story</string>
    <string name="already_saved_this_post">Already Saved this Post</string>
    <string name="profileToolbar">Profile</string>
    <string name="new_post_txt">New Post</string>
    <string name="new_story_txt">New Story</string>
    <string name="new_reel_txt">New Reel</string>
</resources>