<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:context=".ui.login.MainActivity">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userProfileView"
                android:layout_width="@dimen/_96sdp"
                android:layout_height="@dimen/_96sdp"
                android:src="@drawable/user"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/editProfileTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_picture"
                android:textColor="@color/sky"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/userProfileView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/updateEmailEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edit_text"
                android:layout_margin="@dimen/_20sdp"
                android:hint="@string/update_your_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_12sdp"
                android:singleLine="true"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editProfileTv" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/updateUsernameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/update_your_username"
                android:padding="@dimen/_12sdp"
                android:singleLine="true"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/updateEmailEditText" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/updatePasswordEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/update_your_password"
                android:padding="@dimen/_12sdp"
                android:singleLine="true"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/updateUsernameEditText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/updateProfileBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:background="@color/sky"
                android:padding="@dimen/_12sdp"
                android:text="@string/update_profile"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/updatePasswordEditText" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>