<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.post.PostActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backPress"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_45sdp"
            android:src="@drawable/ic_back_arrow_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_constraintStart_toEndOf="@id/backPress"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/new_reel"
            app:titleTextColor="@color/black" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/postVideo"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:scaleType="fitCenter"
            android:src="@drawable/video_solid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/materialToolBar" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/captionReelET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text"
            android:layout_margin="@dimen/_20sdp"
            android:hint="@string/caption"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_12sdp"
            android:singleLine="true"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postVideo" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/centerGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/postReelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:text="@string/post_btn"
            android:backgroundTint="@color/sky"
            app:layout_constraintEnd_toStartOf="@id/centerGuideline"
            app:layout_constraintTop_toBottomOf="@id/captionReelET"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelReelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:text="@string/cancel_btn"
            android:backgroundTint="@color/sky"
            app:layout_constraintStart_toEndOf="@id/centerGuideline"
            app:layout_constraintTop_toBottomOf="@id/captionReelET"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>