<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            tools:context=".ui.login.MainActivity">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logoImageView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_55sdp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_instagram"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/usernameEText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/please_enter_email"
                android:padding="@dimen/_12sdp"
                android:singleLine="true"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordEText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/please_enter_password"
                android:padding="@dimen/_12sdp"
                android:singleLine="true"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameEText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logInButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:background="@color/sky"
                android:padding="@dimen/_12sdp"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordEText"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/accountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/don_t_have_an_account"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logInButton" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>