<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.postManagement.addPost.PostActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/sky"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backPress"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_back_arrow_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/customTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_post_txt"
                android:layout_marginStart="@dimen/_20sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />


        </androidx.appcompat.widget.Toolbar>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/postImage"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_120sdp"
            android:scaleType="fitCenter"
            android:layout_marginTop="@dimen/_25sdp"
            android:src="@drawable/image_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/captionET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/background_edit_text"
            android:hint="@string/caption"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_12sdp"
            android:singleLine="true"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postImage" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/centerGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/postBtn"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            style="@style/capsuleButton"
            android:background="@drawable/selector_transparent_white_stroke_button"
            android:backgroundTint="@color/sky"
            android:text="@string/post_btn"
            app:layout_constraintEnd_toStartOf="@id/centerGuideline"
            app:layout_constraintTop_toBottomOf="@id/captionET" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelBtn"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            style="@style/capsuleButton"
            android:background="@drawable/selector_transparent_white_stroke_button"
            android:backgroundTint="@color/sky"
            android:text="@string/cancel_btn"
            app:layout_constraintStart_toEndOf="@id/centerGuideline"
            app:layout_constraintTop_toBottomOf="@id/captionET" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>