<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.settings.SettingFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/sky"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/settingTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="test"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp" />

        </androidx.appcompat.widget.Toolbar>


        <androidx.cardview.widget.CardView
            android:id="@+id/helpCv"
            android:layout_width="match_parent"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/aboutCv">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_8sdp"
                android:text="@string/help"
                android:textColor="@color/black" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/aboutCv"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/logOutCv">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_8sdp"
                android:text="@string/about"
                android:textColor="@color/black" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/logOutCv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_8sdp"
                android:text="@string/logout"
                android:textColor="@color/red" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
