<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:context=".ui.login.MainActivity">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logoImageView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_55sdp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_instagram"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userProfileView"
                android:layout_width="@dimen/_96sdp"
                android:layout_height="@dimen/_96sdp"
                android:src="@drawable/user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logoImageView" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/please_enter_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_12sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userProfileView" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/usernameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/background_edit_text"

                android:hint="@string/please_enter_username"
                android:padding="@dimen/_12sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/please_enter_password"
                android:padding="@dimen/_12sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:background="@color/sky"
                android:padding="@dimen/_12sdp"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>